# Image-Vectorizer-with-Curve-Fitting

./: .gitignore  CMakeLists.txt  Makefile  README.md
data/real/: README.md
data/synthetic/: README.md
demo/: README.md  cli_demo.sh  video_link.txt
experiments/: benchmark.sh
experiments/results/: runtime.csv
report/: report.tex
src/: bezier.cpp  bezier.hpp  gen_synthetic.cpp  geometry.hpp  image.cpp  image.hpp  main.cpp  rdp.cpp  rdp.hpp  svg.cpp  svg.hpp  tracer.cpp  tracer.hpp
tests/: test_algorithms.sh
visualization/: plot_results.py
